2003-09-17  Albert Chu <chu11@llnl.gov>

	* src/pdsh/dsh.c (dsh): 
	Fixed bug in which _rsh_thread does not terminate jobs.  But
	caused by kill_on_fail value not being propogated properly to
	_rsh_thread.

	* src/pdsh/dsh.c (dsh): 
	Before exitting on a pthread_create failure, added code to kill
	all remote jobs if kill_on_fail is true.
	
2003-09-16  Albert Chu <chu11@llnl.gov>
	
	* src/modules/mcmd.c (mcmd): Fixed an additional error message
	inconsistency due to a close being called before an errno check.  

	* src/qsnet/mrshd.c (mqshell_get_args): Modified error messages to
	be more consistent with mrshd error messages in the mrshd project.

	* doc/pdsh.1.in: Added note to LIMITATIONS about how the maximum
	number of simultaneous jobs that can be executed is limited by the
	maximum number of concurrent threads that can be spawned.

2003-09-12  Albert Chu <chu11@llnl.gov>

	* src/pdsh/dsh.c (dsh): Error message from pthread_create()
	fixed to output error message based on return value from 
	pthread_create(), not errno.

2003-08-29  Mark Grondona <mgrondona@llnl.gov>

	* src/common/xpoll.c (_poll) : Removed variable length array
	declaration (not yet supported in many compilers).

	* src/modules/sdr.c, src/modules/nodeattr.c : Use hostlist_push
	instead of hostlist_push_host, which doesn't get exported on AIX.
	
	* configure.ac : Append -Wl,-bexpall and -Wl,-brtl to LDFLAGS if 
	using dynamic loading on AIX. Added AC_AIX macro. 

2003-08-28  Mark Grondona <mgrondona@llnl.gov>

	* : Reorganized pdsh code and changed sources accordingly.

	* src/qsnet/qshd_common.h, src/qsnet/qshd_common.c: 
	Renamed to qshell.[ch], changed	main_common() to qshell() and 
	removed references to ``doit.''

	* : Tagged pdsh-2-0-0-pre5 for testing.

2003-08-28  Albert Chu  <chu11@llnl.gov>

	* src/modules/mcmd.c (mcmd) src/modules/mqcmd.c (mqcmd): 
	Incorporated Al Chu's patch to fix potential error message
	inconsistencies due to a close call before an errno check. 
